replaced depricated '.newInstance()' with '.getDeclaredConstructor().newInstance()'.