@@ -682,7 +682,7 @@ public class StdArea implements Area
 		}
 		try
 		{
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
