@@ -364,7 +364,7 @@ public class StdSpaceShip extends StdBoardableShip implements SpaceShip
 	{
 		try
 		{
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
