@@ -380,7 +380,7 @@ public class GenCharClass extends StdCharClass
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
