@@ -137,7 +137,7 @@ public class DefaultClanGovernment implements ClanGovernment
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
