@@ -63,7 +63,7 @@ public class DefaultClimate implements Climate
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
