@@ -133,7 +133,7 @@ public class DefaultCoffeeShop implements CoffeeShop
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
