@@ -278,7 +278,7 @@ public class DefaultCoffeeTableRow implements CoffeeTableRow
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
