@@ -142,7 +142,7 @@ public class DefaultPlayerStats implements PlayerStats
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
