@@ -53,7 +53,7 @@ public class DefaultPoll implements Poll
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
