@@ -276,7 +276,7 @@ public class DefaultQuest implements Quest, Tickable, CMObject
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
