@@ -412,7 +412,7 @@ public class DefaultScriptingEngine implements ScriptingEngine
 	{
 		try
 		{
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
