@@ -51,7 +51,7 @@ public class StdFactoryMOB extends StdMOB
 	{
 		try
 		{
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
