@@ -76,7 +76,7 @@ public class ServiceEngine implements ThreadEngine
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
